# kube-hound

./: .dockerignore  .gitignore  Dockerfile  README.md  custom-sonar.properties  docker-compose.yml  kube-hound.sh  pyproject.toml
k8spurifier/: __main__.py  analysis.py  application.py  applicationobject.py  hound.py  scheduler.py  service.py  smells.py
k8spurifier/builtin_analyses/: __init__.py  externalip_analysis.py  kubesec_analysis.py  nop.py  openapi_securityscheme.py  secrets_in_env.py  traffic_analysis.py
k8spurifier/frontend/: config.py  repositories.py
kube_hound/: __main__.py  analysis.py  applicationobject.py  hound.py  scheduler.py  service.py  smells.py
kube_hound/builtin_analyses/: __init__.py  cryptographic_primitives_usage.py  dbms_data_at_rest_encryption.py  exposed_services_external_ip.py  externalip_analysis.py  hardcoded_docker_source_secrets.py  hardcoded_secrets_environment.py  hardcoded_unencrypted_kubernetes_secrets.py  insufficient_access_control_openapi.py  kubesec_analysis.py  multiple_user_authentication_openapi.py  openapi_securityscheme.py  secrets_in_env.py  suspicious_cryptographic_names.py  traffic_analysis.py  unencrypted_pod_to_pod_traffic.py  unnecessary_privileges_pods.py  usage_of_cryptographic_primitives.py
kube_hound/frontend/: config.py  repositories.py
scripts/: run_mock.sh  run_online_boutique.sh  run_sock_shop.sh  run_tests.sh  typecheck_and_lint.sh
test_files/mock-application/: mock-config.yaml
test_files/online-boutique/: online-boutique-config.yaml
tests/: test_repositories.py  test_sourcode.py
(+88 files in other folders)
